@@ -1,4 +1,6 @@
 ; This is a comment.
+; config options go here.
+CONFIG_END
 
 SCENARIO_BEGIN Query receives answer from the cache
 
